--- a/ProjectGreen/app/build.gradle
+++ b/ProjectGreen/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,6 +32,8 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
             because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
@@ -44,6 +48,9 @@ dependencies {
     dependencies {
         implementation 'com.daimajia.androidanimations:library:2.4@aar'
     }
+
+    // Import the Firebase BoM
+    // implementation platform('com.google.firebase:firebase-bom:32.8.1')
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
