--- a/ProjectGreen/app/build.gradle
+++ b/ProjectGreen/app/build.gradle
@@ -34,6 +34,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
 
 
@@ -65,4 +69,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 }
