--- a/ProjectGreen/app/build.gradle
+++ b/ProjectGreen/app/build.gradle
@@ -1,6 +1,8 @@
+
+
 plugins {
     id 'com.android.application'
-
+    id 'androidx.navigation.safeargs'
     id 'com.google.gms.google-services'
 }
 
@@ -70,9 +72,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-
-
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
-
 }
