--- a/ProjectGreen/build.gradle
+++ b/ProjectGreen/build.gradle
@@ -1,11 +1,22 @@
 buildscript {
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.14'
+
+    repositories {
+        google()
     }
+
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.1'
+        def nav_version = "2.7.7"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     // FireBase
     id 'com.google.gms.google-services' version '4.4.1' apply false
+
 }
