DeepMind_added_to_the_game
Google AI requires API 28 and higher
v1.16

--- a/ProjectGreen/app/build.gradle
+++ b/ProjectGreen/app/build.gradle
@@ -73,4 +73,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // https://ai.google.dev/gemini-api/docs/get-started/tutorial?lang=android&%3Bauthuser=9&authuser=9#prerequisites
+    // add the dependency for the Google AI client SDK for Android
+    implementation("com.google.ai.client.generativeai:generativeai:0.6.0")
+
+    // Required for one-shot operations (to use `ListenableFuture` from Guava Android)
+    implementation("com.google.guava:guava:31.0.1-android")
+
+    // Required for streaming operations (to use `Publisher` from Reactive Streams)
+    implementation("org.reactivestreams:reactive-streams:1.0.4")
+
+    // To use CallbackToFutureAdapter
+    implementation("androidx.concurrent:concurrent-futures:1.1.0")
+
 }
